View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032110 | Open CASCADE | OCCT:Visualization | public | 2021-02-02 14:31 | 2021-02-06 14:29 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032110: Visualization, TKOpenGl - allow incomplete PBR on OpenGL ES 2.0 without GL_EXT_shader_texture_lod | ||||
Description | PBR specular mapping relies on textureCubeLod() GLSL function, which is available on OpenGL ES 3.0 or OpenGL ES 2.0 + GL_EXT_shader_texture_lod extension. Without textureCubeLod(), specular map will not work as expected, but still supporting such incomplete PBR implementation might be more preferable than disabling it altogether. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32110 has been created by kgv. SHA-1: 4ac740567c2e30012d885cdbc20d5da6874ff713 Detailed log of new commits: Author: kgv Date: Tue Feb 2 14:33:57 2021 +0300 0032110: Visualization, TKOpenGl - allow incomplete PBR on OpenGL ES 2.0 without GL_EXT_shader_texture_lod textureCube() is now used as fallback when textureCubeLod() is unavailable. Author: mkrylova Date: Tue Sep 8 17:50:28 2020 +0300 0031704: Visualization - add an interactive object AIS_LightSource representing a light source Added new class AIS_LightSource representing a light source presentation. Graphic3d_TMF_CameraPers - added new mode to Graphic3d_TransformPers defining 3D point relative to camera Eye position |
|
pbr_OK.png (1,133,239 bytes) |
|
pbr_nolod_KO.png (1,079,235 bytes) |
|
Branch CR32110 has been updated forcibly by kgv. SHA-1: 1b3ccd1296225cf1bd9abd9365c8ebbfecdce781 |
|
Patch is ready for review - OCCT branch: CR32110. |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2021-02-05 master SHA - d918913f1cfa6df6852ccc3cab50aae2b5a29821 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2021-02-05 SHA - 7f3780c87f7b9ca7bc315437ae37fd3815a4316d was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17801.74000000001 / 17781.070000000076 [+0.12%] Products Total CPU difference: 11522.820000000105 / 11527.24000000011 [-0.04%] Windows-64-VC14: OCCT Total CPU difference: 19371.578125 / 19391.0625 [-0.10%] Products Total CPU difference: 12882.46875 / 12836.03125 [+0.36%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32110 has been deleted by inv. SHA-1: 1b3ccd1296225cf1bd9abd9365c8ebbfecdce781 |
occt: master 75642c14 2021-02-02 11:33:57 Committer: bugmaster Details Diff |
0032110: Visualization, TKOpenGl - allow incomplete PBR on OpenGL ES 2.0 without GL_EXT_shader_texture_lod textureCube() is now used as fallback when textureCubeLod() is unavailable. |
Affected Issues 0032110 |
|
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
mod - src/Shaders/Declarations.glsl | Diff File | ||
mod - src/Shaders/Shaders_Declarations_glsl.pxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-02-02 14:31 | kgv | New Issue | |
2021-02-02 14:31 | kgv | Assigned To | => kgv |
2021-02-02 14:32 | git | Note Added: 0098611 | |
2021-02-02 14:35 | kgv | File Added: pbr_OK.png | |
2021-02-02 14:35 | kgv | File Added: pbr_nolod_KO.png | |
2021-02-02 14:55 | git | Note Added: 0098612 | |
2021-02-02 14:55 | kgv | Relationship added | related to 0032083 |
2021-02-02 18:32 | kgv | Note Added: 0098619 | |
2021-02-02 18:32 | kgv | Assigned To | kgv => osa |
2021-02-02 18:32 | kgv | Status | new => resolved |
2021-02-03 14:21 | osa | Note Added: 0098642 | |
2021-02-03 14:21 | osa | Assigned To | osa => bugmaster |
2021-02-03 14:21 | osa | Status | resolved => reviewed |
2021-02-06 14:16 | bugmaster | Note Added: 0098718 | |
2021-02-06 14:16 | bugmaster | Status | reviewed => tested |
2021-02-06 14:20 | bugmaster | Test case number | => Not required |
2021-02-06 14:24 | bugmaster | Changeset attached | => occt master 75642c14 |
2021-02-06 14:24 | bugmaster | Status | tested => verified |
2021-02-06 14:24 | bugmaster | Resolution | open => fixed |
2021-02-06 14:29 | git | Note Added: 0098730 |