0032110: Visualization, TKOpenGl - allow incomplete PBR on OpenGL ES 2.0 without GL_EXT_shader_texture_lod

textureCube() is now used as fallback when textureCubeLod() is unavailable.